k8s/base/infrastructure/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-databases
  namespace: ng-console
  labels:
    app.kubernetes.io/name: isolate-databases
    app.kubernetes.io/part-of: ng-console
spec:
  podSelector:
    matchLabels:
      role: database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/part-of: ng-console
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 27017
